--- a/day03/views/form.ejs
+++ b/day03/views/form.ejs
@@ -7,7 +7,10 @@
 <body>
 
     <form action="#" method="post">
-        <input type="text" name="name" />
+        姓名：
+        <input type="text" name="name" /><br />
+        年龄:
+        <input type="text" name="age" /><br />
         <input type="submit"/>
     </form>
 </body>
